@@ -36,29 +36,36 @@ public:
     
 	Matrix() : VECTOR() {}
 	
-	Matrix(SEXP x) throw(not_compatible) : VECTOR(){
+	Matrix(SEXP x) throw(not_compatible) : VECTOR(), nrows(0) {
 		if( ! ::Rf_isMatrix(x) ) throw not_compatible("not a matrix") ;
 		SEXP y = r_cast<RTYPE>( x ) ;
 		VECTOR::setSEXP( y );
+		nrows = VECTOR::dims()[0] ;
 	}
 	
-	Matrix( const Dimension& dims) throw(not_compatible) : VECTOR() {
+	Matrix( const Dimension& dims) throw(not_compatible) : VECTOR(), nrows(dims[0]) {
 		if( dims.size() != 2 ) throw not_compatible("not a matrix") ;
 		VECTOR::setSEXP( Rf_allocVector( RTYPE, dims.prod() ) ) ;
 		VECTOR::init() ;
 		VECTOR::attr( "dim" ) = dims ;
 	}
 	
-	Matrix( const int& nrows, const int& ncols) : VECTOR( Dimension( nrows, ncols ) ) {}
+	Matrix( const int& nrows_, const int& ncols) : 
+	    VECTOR( Dimension( nrows_, ncols ) ), 
+	    nrows(nrows_)
+	{}
 	
 	template <typename Iterator>
-	Matrix( const int& nrows, const int& ncols, Iterator start ) : VECTOR( start, start + (nrows*ncols) ) {
+	Matrix( const int& nrows_, const int& ncols, Iterator start ) : 
+	    VECTOR( start, start + (nrows_*ncols) ),
+	    nrows(nrows_)
+	{
 		VECTOR::attr( "dim" ) = Dimension( nrows, ncols ) ; 
 	}
 	
-	Matrix( const int& n) : VECTOR( Dimension( n, n ) ) {}
+	Matrix( const int& n) : VECTOR( Dimension( n, n ) ), nrows(n) {}
 	
-	Matrix( const Matrix& other) throw(not_compatible) : VECTOR() {
+	Matrix( const Matrix& other) throw(not_compatible) : VECTOR(), nrows(other.nrows) {
 		SEXP x = other.asSexp() ;
 		if( ! ::Rf_isMatrix(x) ) throw not_compatible("not a matrix") ;
 		VECTOR::setSEXP( x ) ;
@@ -68,21 +75,21 @@ public:
 		SEXP x = other.asSexp() ;
 		if( ! ::Rf_isMatrix(x) ) not_compatible("not a matrix") ;
 		VECTOR::setSEXP( x ) ;
+		nrows = other.nrows ;
 		return *this ;
 	}
 	
 	template <bool NA, typename MAT>
-    Matrix( const MatrixBase<RTYPE,NA,MAT>& other ) : VECTOR() {
-    	int nr = other.nrow() ;
+    Matrix( const MatrixBase<RTYPE,NA,MAT>& other ) : VECTOR(), nrows(other.nrow()) {
     	int nc = other.ncol() ;
-    	SEXP x = PROTECT( Rf_allocVector( RTYPE, nr * nc ) ) ;
+    	SEXP x = PROTECT( Rf_allocVector( RTYPE, nrows * nc ) ) ;
     	SEXP d = PROTECT( Rf_allocVector( INTSXP, 2) ) ;
-    	INTEGER(d)[0] = nr ;
+    	INTEGER(d)[0] = nrows ;
     	INTEGER(d)[1] = nc ;
     	Rf_setAttrib( x, R_DimSymbol, d ) ;
     	RObject::setSEXP( x ) ;
     	UNPROTECT( 2 ) ;
-    	import_matrix_expression<NA,MAT>( other, nr, nc ) ;
+    	import_matrix_expression<NA,MAT>( other, nrows, nc ) ;
 	}
    
 private:
@@ -121,11 +128,25 @@ public:
     inline Proxy operator[]( int i ) const {
     	return static_cast< const Vector<RTYPE>* >( this )->operator[]( i ) ;
     }
-    inline Proxy operator()( int i, int j ) const {
-    	return static_cast< const Vector<RTYPE>* >( this )->operator()( i, j ) ;
+    
+    inline Proxy operator()( const size_t& i, const size_t& j) throw(not_a_matrix,index_out_of_bounds){
+		return static_cast< Vector<RTYPE>* >( this )->operator[]( 
+		    offset( i, j )
+		    ) ;
+	}
+	
+	inline Proxy operator()( const size_t& i, const size_t& j) const throw(not_a_matrix,index_out_of_bounds){
+		return static_cast< const Vector<RTYPE>* >( this )->operator[]( 
+		    offset( i, j )
+		    ) ;
+	}
+	
+private:
+    
+    inline int offset( int i, int j) const {
+        return i + nrows * j ;
     }
     
-private:
 	virtual void update(){
 		RCPP_DEBUG_1( "%s::update", DEMANGLE(Matrix) ) ;
 		VECTOR::update_vector() ;
@@ -161,13 +182,13 @@ public:
     	return VECTOR::dims()[1]; 
     }
     inline int nrow() const throw(not_a_matrix){
-    	return VECTOR::dims()[0]; 
+    	return nrows ; 
     }
     inline int cols() const throw(not_a_matrix){ 
     	return VECTOR::dims()[1]; 
     }
     inline int rows() const throw(not_a_matrix){ 
-    	return VECTOR::dims()[0]; 
+    	return nrows ; 
     }
 	    
 	typedef MatrixRow<RTYPE> Row ;
@@ -178,8 +199,10 @@ public:
 	
 	inline iterator begin() const{ return VECTOR::begin() ; }
 	inline iterator end() const{ return VECTOR::end() ; }
-	 
     
+private:
+    int nrows ;	
+	
 } ;
 
 #endif
